<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
        <variable
            name="viewmodel"
            type="com.example.pokemon.viewmodels.SearchViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/background"
            android:layout_marginBottom="50dp">
            <ImageView
                android:layout_width="@dimen/search_image_size"
                android:layout_height="@dimen/search_image_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/search_image_margin_top"
                android:layout_marginBottom="@dimen/margin_standard"
                app:srcCompat="@mipmap/img_pokeball"
                android:contentDescription="@string/pokeball"  />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/search_phrase"
                android:fontFamily="@font/aldrich"
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="true"
                android:textSize="@dimen/text_search" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pokemon_name_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/aldrich"
                app:boxBackgroundColor="@android:color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="@dimen/margin_standard_min"
                app:errorEnabled="true"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:hint="@string/pokemon_name"
                    android:text="@{viewmodel.pokemonName}"
                    android:afterTextChanged="@{viewmodel::setPokemonName}"
                    android:backgroundTint="@color/transparant"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_standard_min"
                android:layout_marginRight="@dimen/margin_standard_min">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/search_button"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    style="@style/PokemonButton"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:onClick="@{clickListener}"
                    android:text="@string/button_search"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_search"
                    android:layout_marginBottom="@dimen/margin_standard"
                    />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</layout>